--- a/src/main/webapp/resources/css/user/upload.css
+++ b/src/main/webapp/resources/css/user/upload.css
@@ -1,14 +1,14 @@
 	.addScroll{
 		overflow-y:auto;
 		height: 200px;
-		background-color:#E9ECEF;
+		background-color:#FAFAFC;
 		padding-top:5px; 
 		padding-left:5px;
 	}
  	
 	.input-file-button{
 		padding: 4px 25px;
-		background-color:#FF6600;
+		background-color:#AC7543;
 		border-radius: 4px;
 		color: white;
 		cursor: pointer;
